# Worksite

./: .gitignore  LICENSE  README.md  plot.html  pyproject.toml  start.sh  style.sh
worksite/: config.py  hello.py  logger.py  main.py  pyproject.toml  stage.py  tests.py
worksite/apps/SiteProject/: analytics.py  application.py  charting.py  project.py  routes.py
worksite/apps/SiteProject/app/: application.py
worksite/apps/SiteRate/: application.py  rate.py  routes.py
worksite/apps/SiteRate/app/: application.py
worksite/apps/SiteSupplier/: application.py  routes.py  supplier.py
worksite/apps/SiteSupplier/app/: application.py
worksite/apps/SiteUser/: application.py
worksite/apps/SiteUser/app/: application.py
worksite/apps/SiteWorker/: application.py  routes.py  worker.py
worksite/apps/SiteWorker/app/: application.py
worksite/core/baseModels/: __init__.py  accounting_models.py  addresslocation_models.py  auth_models.py  comunication_modules.py  data_models.py  employee_models.py  eventstate_models.py  jobtask_models.py  measurments_models.py  project_models.py  rate_models.py  supplier_models.py
worksite/core/baseTemplates/: chart_template.html  general_template.html  index.html  main_template.html  pre_auth_template.html
worksite/core/baseTemplates/components/: document_handle.html  info_alert.html  macros.html
worksite/core/baseTemplates/ui/: main_nav.html
worksite/core/static/: package-lock.json  package.json
worksite/core/utilities/: __init__.py  calendar_days.py  data_lib.py  utils.py
worksite/database/: couch_dms.py  mongo_dms.py
(+134 files in other folders)
