[project]
name = "worksite"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14.3"
dependencies = [
    "fastapi>=0.135.2",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "phonenumbers>=9.0.26",
    "pycountry>=26.2.16",
    "pydantic[email]>=2.12.5",
    "pydantic-extra-types>=2.11.1",
    "pydantic-settings>=2.13.1",
    "pymongo>=4.16.0",
    "stringgenerator>=0.4.4",
    "uvicorn>=0.42.0",
    "werkzeug>=3.1.7",
    "folium>=0.20.0",
    "pdfme>=0.5.0",
    "loguru>=0.7.3",
    "python-multipart>=0.0.22",
    "moviepy>=2.2.1",
]
